--- a/index.html
+++ b/index.html
@@ -115,6 +115,16 @@
 										<li><a href="https://www.kaggle.com/suvojithaldar/analysis-of-world-s-richest-athletes" class="button">View Project</a></li>
 									</ul>
 									</article>
+									<article>
+										<header>
+											<h2><a href="https://github.com/suvojithaldar/SQLQueries">SQL Queries Practice<br /></a></h2>
+										</header>
+										<a href="https://github.com/suvojithaldar/SQLQueries" class="image fit"><img src="images/sql.png" alt="" /></a>
+										<p>This is where sometimes I upload the queries I practice.</p>
+										<ul class="actions special">
+											<li><a href="hhttps://github.com/suvojithaldar/SQLQueries" class="button">View Project</a></li>
+										</ul>
+										</article>
 							</section>
 
 						<!-- Footer -->
