--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 											<h2><a href="https://github.com/suvojithaldar/SQLQueries">SQL Queries Practice<br /></a></h2>
 										</header>
 										<a href="https://github.com/suvojithaldar/SQLQueries" class="image fit"><img src="images/sql.png" alt="" /></a>
-										<p>This is where sometimes I upload the queries I practice.</p>
+										<p>This is where I sometimes upload the queries I practice.</p>
 										<ul class="actions special">
 											<li><a href="hhttps://github.com/suvojithaldar/SQLQueries" class="button">View Project</a></li>
 										</ul>
