--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 									</article>
 									<article>
 										<header>
-											<h2><a href="https://github.com/suvojithaldar/SQLQueries">SQL Exercisese<br /></a></h2>
+											<h2><a href="https://github.com/suvojithaldar/SQLQueries">SQL Exercises<br /></a></h2>
 										</header>
 										<a href="https://github.com/suvojithaldar/SQLexercise" class="image fit"><img src="images/sql.png" alt="" /></a>
 										<p>This is where I sometimes upload the queries I exercise.</p>
