--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 										</a></h2>
 									</header>
 									<a href="https://www.kaggle.com/suvojithaldar/video-game-sales-analysis" class="image fit"><img src="images/game.webp" alt="" /></a>
-									<p>In this project we analyze video game sales data in Python with BeautifulSoup.</p>
+									<p>In this project we analyze video game sales data in Python.</p>
 									<ul class="actions special">
 										<li><a href="https://www.kaggle.com/suvojithaldar/video-game-sales-analysis" class="button">View Project</a></li>
 									</ul>
@@ -100,7 +100,7 @@
 										</a></h2>
 									</header>
 									<a href="https://github.com/suvojithaldar/PortfolioProject/blob/main/scraper_jiomart.ipynb" class="image fit"><img src="images/jiomart.png" alt="" /></a>
-									<p>Web Scraping Indian E-commerce site Jiomart.</p>
+									<p>Web Scraping Indian E-commerce site Jiomart in Python with BeautifulSoup.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/suvojithaldar/PortfolioProject/blob/main/scraper_jiomart.ipynb" class="button">View Project</a></li>
 									</ul>
