--- a/index.html
+++ b/index.html
@@ -136,6 +136,16 @@
 											<li><a href="hhttps://github.com/suvojithaldar/SQLQueries" class="button">View Project</a></li>
 										</ul>
 										</article>
+										<article>
+											<header>
+												<h2><a href="https://github.com/suvojithaldar/web-scraper/blob/main/amazon_reviews/spiders/amazon_bot.py">Scraping Amazon Reviews using Scrapy<br /></a></h2>
+											</header>
+											<a href="https://github.com/suvojithaldar/web-scraper/blob/main/amazon_reviews/spiders/amazon_bot.py" class="image fit"><img src="images/amazon_review.jpg" alt="" /></a>
+											<p>Scraping Amazon Reviews using Scrapy.</p>
+											<ul class="actions special">
+												<li><a href="https://github.com/suvojithaldar/web-scraper/blob/main/amazon_reviews/spiders/amazon_bot.py" class="button">View Project</a></li>
+											</ul>
+											</article>
 							</section>
 
 						<!-- Footer -->
