--- a/index.html
+++ b/index.html
@@ -48,18 +48,29 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<h2><a href="https://github.com/suvojithaldar/PortfolioProject/blob/main/Covid19_SQL.sql">Data Exploration in SQL Server<br />
+									<h2><a href="https://github.com/suvojithaldar/PortfolioProject/blob/main/vivo%20t1%20flipkart/flipkart%20scraper.ipynb">Personal Project: Scraping and Analyzing Product Reviews<br />
 									</a></h2>
-									<p>In this project we explore Covid-19 data in SQL.</p>
+									<p>In this project I scrape product reviews from Flipkart and analyze the reviews on Python.</p>
 								</header>
-								<a href="https://github.com/suvojithaldar/PortfolioProject/blob/main/Covid19_SQL.sql" class="image main"><img src="images/covid.jpg" alt="" /></a>
+								<a href="https://github.com/suvojithaldar/PortfolioProject/blob/main/vivo%20t1%20flipkart/flipkart%20scraper.ipynb" class="image main"><img src="images/vivo.png" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="https://github.com/suvojithaldar/PortfolioProject/blob/main/Covid19_SQL.sql" class="button large">View Project</a></li>
+									<li><a href="https://github.com/suvojithaldar/PortfolioProject/blob/main/vivo%20t1%20flipkart/flipkart%20scraper.ipynb" class="button large">View Project</a></li>
 								</ul>
 							</article>
 
 						<!-- Posts -->
 							<section class="posts">
+								<article class="post featured">
+									<header class="major">
+										<h2><a href="https://github.com/suvojithaldar/PortfolioProject/blob/main/Covid19_SQL.sql">Data Exploration in SQL Server<br />
+										</a></h2>
+										<p>In this project we explore Covid-19 data in SQL.</p>
+									</header>
+									<a href="https://github.com/suvojithaldar/PortfolioProject/blob/main/Covid19_SQL.sql" class="image main"><img src="images/covid.jpg" alt="" /></a>
+									<ul class="actions special">
+										<li><a href="https://github.com/suvojithaldar/PortfolioProject/blob/main/Covid19_SQL.sql" class="button large">View Project</a></li>
+									</ul>
+								</article>
 								<article class="post featured">
 									<header class="major">
 										<h2><a href="https://public.tableau.com/app/profile/suvojit.haldar">Tableau Dashboard<br />
