--- a/index.html
+++ b/index.html
@@ -61,7 +61,29 @@
 						<!-- Posts -->
 							<section class="posts">
 								<article class="post featured">
-									<header class="major">
+								<header class="major">
+									<h2><a href="https://github.com/suvojithaldar/PortfolioProject/blob/main/capstone%20project/capstone%20project.ipynb">Google Data Analytics Capstone Project<br />
+									</a></h2>
+								</header>
+								<a href="https://github.com/suvojithaldar/PortfolioProject/blob/main/capstone%20project/capstone%20project.ipynb" class="image main"><img src="images/cycling.webp" alt="" /></a>
+								<p>This is a project I did when I completed the Google Data Analytics Professional Certificate program.</p>
+								<ul class="actions special">
+									<li><a href="https://github.com/suvojithaldar/PortfolioProject/blob/main/capstone%20project/capstone%20project.ipynb" class="button large">View Dashboard</a></li>
+								</ul>
+							</article>
+								<article>
+									<header>
+										<h2><a href="https://public.tableau.com/app/profile/suvojit.haldar">Tableau Dashboard<br />
+										</a></h2>
+									</header>
+									<a href="https://public.tableau.com/app/profile/suvojit.haldar" class="image main"><img src="images/tableau.png" alt="" /></a>
+									<p>Check out the dashboards I have made in Teableau.</p>
+									<ul class="actions special">
+										<li><a href="https://public.tableau.com/app/profile/suvojit.haldar" class="button large">View Dashboard</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
 										<h2><a href="https://github.com/suvojithaldar/PortfolioProject/blob/main/Covid19_SQL.sql">Data Exploration in SQL Server<br />
 										</a></h2>
 										<p>In this project we explore Covid-19 data in SQL.</p>
@@ -69,18 +91,6 @@
 									<a href="https://github.com/suvojithaldar/PortfolioProject/blob/main/Covid19_SQL.sql" class="image main"><img src="images/covid.jpg" alt="" /></a>
 									<ul class="actions special">
 										<li><a href="https://github.com/suvojithaldar/PortfolioProject/blob/main/Covid19_SQL.sql" class="button large">View Project</a></li>
-									</ul>
-								</article>
-								<article class="post featured">
-									<header class="major">
-										<h2><a href="https://public.tableau.com/app/profile/suvojit.haldar">Tableau Dashboard<br />
-										</a></h2>
-										
-									</header>
-									<a href="https://public.tableau.com/app/profile/suvojit.haldar" class="image main"><img src="images/tableau.png" alt="" /></a>
-									<p>Check out the dashboards I have made in Teableau.</p>
-									<ul class="actions special">
-										<li><a href="https://public.tableau.com/app/profile/suvojit.haldar" class="button large">View Dashboard</a></li>
 									</ul>
 								</article>
 								<article>
