--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 								<a href="https://github.com/suvojithaldar/PortfolioProject/blob/main/capstone%20project/capstone%20project.ipynb" class="image main"><img src="images/cycling.webp" alt="" /></a>
 								<p>This is a project I did when I completed the Google Data Analytics Professional Certificate program.</p>
 								<ul class="actions special">
-									<li><a href="https://github.com/suvojithaldar/PortfolioProject/blob/main/capstone%20project/capstone%20project.ipynb" class="button large">View Dashboard</a></li>
+									<li><a href="https://github.com/suvojithaldar/PortfolioProject/blob/main/capstone%20project/capstone%20project.ipynb" class="button large">View Project</a></li>
 								</ul>
 							</article>
 
